# tsk

./: .gitignore  .pre-commit-config.yaml  README.md  Taskfile.yml  pyproject.toml
docs/: SPEC.md  design.md  prompt.md
src/tsk/: __init__.py  cli.py  fs.py  models.py  parser.py  storage.py
tests/: test_e2e.py  test_fs.py  test_models.py  test_parser.py  test_storage.py
